Fixed footer alignment bugs

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,7 +42,7 @@ a.anchors:hover {
 }
 
 main.container {
-    margin-bottom: 5rem;
+    margin-bottom: 90px;
 }
 
 /* Navigation */
